tests/rt/pos/ifc/getPC.trp
let val x = if true raisedTo `{secret}` then _pc () else 1
 in printWithLabels x 
 end 