tests/rt/neg/ifc/declassify_with_block01.trp
let val x = true raisedTo `{alice}`
    val y = if x then () else ()
    val z = declassify (x, authority, `{}`)
in () 
end 